# firebot-eval

./: .env.example  .gitignore  README.md  impl-plan.md  lefthook.yml  main.py  pyproject.toml  ruff.toml
.ci-smoke/: results.json  scenario_parameter_records_seeded_holdout.json  scenario_parameter_records_seeded_train.json  scenario_parameter_records_seeded_val.json
.github/workflows/: ci.yml
docs/: data-pipeline.md  envspec.md  training.md
docs/planning/: env-checklist.md  harden-training.md  impl-plan.md  proposal.md  train-plan.md
drd-archive/: backlog.md
drd-archive/src/: env.py  networks.py  ppo.py  train.py
notebooks/: clean_data.ipynb  data_audit.ipynb  data_outlier_audit.ipynb  training_0_analysis.ipynb  training_1_analysis.ipynb
scripts/: canary.py  run_benchmark_eval.ps1  run_benchmark_eval.sh  run_benchmark_train.ps1  run_benchmark_train.sh
scripts/stages/: 01_karpathy_overfit.sh  02_smoke_train_and_repro.sh  03_smoke_eval.sh  04_pilot_sweep.sh  05_final_train.sh  _common.sh
src/: config.py  env.py  evaluate.py  networks.py  ppo.py  train.py  utils.py  viz.py
src/ingestion/: cffdrs.py  clean_historical.py  cwfis.py  dummy.py  firms.py  static_dataset.py  weather.py
src/models/: benchmarking.py  evaluate_agents.py  fire_env.py  rl_agent.py  spread_model.py  train_rl_agent.py
tests/models/: test_benchmarking_metrics.py  test_fire_env_setup_contract.py
