[project]
name = "4453"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "torch>=2.10.0",
    "wandb>=0.25.0",
    "stable-baselines3>=2.4.1",
    "xgboost>=3.0.0",
    "scikit-learn>=1.7.0",
    "pandas>=2.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.0.0",
]
